# mopsa-ocaml

./: .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  META.in  Makefile  Makefile.in  README.md  TODO.org  VERSION  cmodule.c  config.status  configure  configure.ac  demo.py  dune  dune-project  mopsa.opam  mopsa.opam.template
analyzer/: Makefile  Makefile.in  dune  mopsa_analyzer.ml
analyzer/configs/: access_path.c.json  c-expand.json  c-smash.json  c.json  default.c.json  default.cfg.json  default.py.json  default.universal.json  default_rel.c.json  expand-smashing.c.json  expand.c.json  init_zero.c.json  partitioning.universal.json  py.json  python-types.json  smashing.c.json  universal_tree.json
analyzer/configs/c/: default.json  expand.json
analyzer/configs/universal/: default.json
analyzer/framework/: README.md  dune  framework.ml  runner.ml
analyzer/framework/combiners/: combiners.ml  dune
analyzer/framework/combiners/common/: common.ml  dune
analyzer/framework/combiners/domain/: apply.ml  compose.ml  domain_switch.ml  dune  partitioning.ml  product.ml  simplified_product.ml  stateless_switch.ml  switch.ml
analyzer/framework/combiners/value/: dune  nonrel.ml  nonrel.mli  product.mli
analyzer/framework/core/: alarm.ml  alarm.mli  all.ml  avalue.ml  avalue.mli  cases.ml  cases.mli  change.ml  context.ml  context.mli  core.ml  dune  effect.ml  effect.mli  eval.ml  eval.mli  flow.ml  flow.mli  hook.ml  hook.mli  id.ml  lattice.ml  manager.ml  marker.ml  marker.mli  path.ml  post.ml  post.mli  print.ml  print.mli  query.ml  query.mli  route.ml  route.mli  token.mli  utils.ml
analyzer/framework/core/ast/: constant.ml  constant.mli  dune  expr.ml  frontend.ml  frontend.mli  program.mli  semantic.ml  semantic.mli  stmt.ml  stmt.mli  typ.ml  typ.mli  var.ml  var.mli  visitor.ml  visitor.mli
analyzer/framework/engines/: automatic.ml  dune  engine_sig.ml  engines.ml
analyzer/framework/engines/interactive/: action.ml  breakpoint.ml  command.ml  dap.ml  dune  engine.ml  envdb.ml  interface.ml  query.ml  terminal.ml  trace.ml
analyzer/framework/lattices/: const.ml  disjoint.ml  dune  pair.ml  partial_inversible_map.mli  partial_map.ml  powerset.mli  powerset_sig.ml
analyzer/framework/output/: common.ml  dune  factory.ml  json.ml  text.ml
analyzer/framework/params/: dune  options.ml  params.ml  paths.ml
analyzer/framework/params/config/: builder.ml  builder.mli  dune  parser.ml  syntax.ml  visitor.ml
analyzer/framework/sig/: dune  sig.ml
analyzer/framework/sig/abstraction/: domain.ml  domain.mli  dune  functor.ml  partitioning.ml  simplified.ml  simplified.mli  simplified_value.ml  simplified_value.mli  stacked.ml  stacked.mli  stacked_functor.ml  stateless.ml  stateless.mli
analyzer/framework/sig/combiner/: domain.ml  dune  simplified.ml  simplified_functor.ml  stacked.ml  stateless.ml
analyzer/framework/sig/reduction/: dune  eval.ml  eval.mli  exec.ml  exec.mli  value.ml
analyzer/framework/toplevel/: dune  toplevel.ml
analyzer/languages/c/: c.ml  dune
analyzer/languages/c/common/: alarms.ml  base.ml  builtins.ml  c_common.ml  common.ml  dune  points_to.ml  quantified_offset.ml  runtime.ml  soundness.ml  static_points_to.ml  type_shapes.ml  type_shapes.mli
analyzer/languages/c/cstubs/: assigns.ml  builtins.ml  dune  resources.ml
analyzer/languages/c/hooks/: analysis_bugs.ml  coverage.ml  disj.ml  dune  hooks.ml
analyzer/languages/c/iterators/: atomics.ml  dune  goto.ml  interproc.ml  intraproc.ml  iterators.ml  loops.ml  program.ml  switch.ml
analyzer/languages/c/lang/: ast.ml  c_lang.ml  dune  frontend.ml  lang.ml  pp.ml  (+1 more)
analyzer/languages/cfg/: README.md  dune  frontend.ml  iterator.ml  pp.ml
analyzer/languages/cpython/: alarms.ml  callstack_tracking.ml  cmodule.ml  count_transitions.ml  dune  prelude.ml  soundness.ml
analyzer/languages/python/: dune  python.ml
analyzer/languages/repl/: dune  frontend.ml
analyzer/languages/stubs/: alarms.ml  ast.ml  body.ml  dune  fallback.ml  soundness.ml
analyzer/languages/universal/: dune  universal.ml
analyzer/mopsa/: dune  mopsa.ml
analyzer/src/: .merlin  main.ml  mopsa.ml
analyzer/src/framework/: .merlin  Makefile  Makefile.config  README.md  alarm.ml  alarm.mli  analyzer.ml  analyzer.mli  annotation.ml  annotation.mli  ast.ml  cache.ml  callstack.ml  channel.ml  composers.ml  composers.mli  config.ml  config.mli  context.ml  context.mli  domain.ml  essentials.ml  eval.ml  eval.mli  exceptions.ml  exceptions.mli  exec.ml  exec.mli  flow.ml  flow.mli  lattice.ml  location.ml  logging.ml  manager.ml  manager.mli  options.ml  post.ml  post.mli  pp.ml  query.ml  (+9 more)
analyzer/src/lang/: .merlin
analyzer/src/mopsa_analyzer/: mopsa.ml
analyzer/stubs/c/: limits.h  mopsa.h  mopsa_libc.c  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
analyzer/stubs/python/: math.py  mopsa.py  pickle.py  platform.py  std_classes.py  std_exceptions.py  std_functions.py  stdlib.py  sys.py  test.py  unittest.py
analyzer/tests/c/: 156_overflow_relational.c  172_backward_mul_floatitv.c  176_do_while_constant_cond.c  allamigeon_tests.c  array_tests.c  bitshift_tests.c  cond_expr_tests.c  div_zero_tests.c  enum_tests.c  float_tests.c  for_tests.c  function_tests.c  goto_test.c  goto_tests.c  int_tests.c  interactive.c  interactive.out  interactive.script  malloc_tests.c  merge_relational.c  overflow_tests.c  pointer_function_tests.c  pointer_tests.c  ptr_sentinel_tests.c  string_length_tests.c  string_tests.c  struct_tests.c  switch_tests.c  union_tests.c
analyzer/tests/cpython/: Dockerfile  basic_tests.py  basicmodule.c  setup.py
analyzer/tests/python/: bool_test.py  bool_tests.py  builtins_tests.py  class_tests.py  dict_tests.py  enums_tests.py  exception_tests.py  float_test.py  function_tests.py  generator_tests.py  import_tests.py  int_test.py  int_tests.py  iter_assign_tests.py  list_tests.py  loop_tests.py  misc_tests.py  operator_tests.py  str_tests.py  with_tests.py
analyzer/tests/universal/: function_tests.u  int_tests.u  loop_tests.u  string_tests.u
(+2681 files in other folders)
