opam-version: "2.0"
name: "mopsa"
synopsis: "MOPSA: A Modular and Open Platform for Static Analysis using Abstract Interpretation"
description: """
MOPSA is a generic framework for building sound static analyzers based on Abstract Interpretation. It features a modular architecture to support different kinds of languages, iterators, and abstract domains.
For the moment, MOPSA can analyze programs written in a subset of C and Python.
It reports run-time errors on C programs and uncaught exceptions on Python programs.
"""
maintainer: "Antoine Miné <antoine.mine@lip6.fr>"
authors: "The MOPSA team"
homepage: "http://mopsa.lip6.fr/"
license: "GNU Lesser General Public License version 3"
dev-repo: "git+https://gitlab.com/mopsa/mopsa.git"
doc: "https://mopsa.lip6.fr/mopsa/doc/"
bug-reports: "https://gitlab.com/mopsa/mopsa/issues"
build: [
  ["autoreconf"] {pinned}
  ["./configure" "--prefix=%{prefix}%" "--enable-byte"]
  [make "-j%{jobs}%"]
  [make "-j%{jobs}%" "tests"] {with-test}
]
install: [
  [make "install"]
]
run-test: [
  [make "tests"]
]
depends: [
  "conf-autoconf" { build }
  "ocaml" {>= "4.08.0"}
  "ocamlfind"
  "apron"
  "conf-libclang"
  "menhir"
  "mlgmpidl"
  "yojson"
  "zarith"
]
available: [ os = "linux" ]
